# notebooklm_mcp

./: .gitignore  README.md  install.py  mcp_config.json  pyproject.toml  setup.sh
.agent/skills/notebooklm/: SKILL.md
src/notebooklm_mcp/: __init__.py  api.py  auth.py  auth_cli.py  rpc_discovery.py  server.py
src/notebooklm_mcp/tools/: __init__.py
